# fujinet-go-coco

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts  zapstore.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  coco_core.cpp  coco_host.c  coco_host.h  session_runtime.cpp  session_runtime.h
app/src/main/cpp/xroar_android/: ao_android.c  joystick_android.c  ui_android.c
app/src/main/java/online/fujinet/go/coco/: AudioOutput.kt  EmulatorSessionService.kt  MainActivity.kt  RuntimeInstaller.kt  SessionController.kt
app/src/main/java/online/fujinet/go/coco/core/: EmulatorNative.kt
app/src/main/java/online/fujinet/go/coco/fujinet/: FujiNetWebViewActivity.kt
app/src/main/java/online/fujinet/go/coco/input/: Coco.kt  GameControllerMapper.kt  HardwareKeyboard.kt
app/src/main/java/online/fujinet/go/coco/ui/: CocoKeyboard.kt  EmulatorScreen.kt  EmulatorSurface.kt  FujiHaptics.kt  JoystickPad.kt  SettingsDialog.kt
app/src/main/java/online/fujinet/go/coco/ui/theme/: Theme.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/online/fujinet/go/coco/input/: CocoInputTest.kt  HardwareKeyboardTest.kt
tools/fujinet/: build-fujinet.sh
tools/fujinet/support/: fujinet_android_entry.cpp
tools/xroar/: build-xroar-core.sh
tools/xroar/support/: becker.c
